--- a/src/styles/components/filters/FilterOverlay.module.scss
+++ b/src/styles/components/filters/FilterOverlay.module.scss
@@ -2,7 +2,7 @@
 @use "../../partials/mixins" as *;
 
 // fullscreen on mobile
-@include responsive(sm) {
+@include responsive(md) {
   :global(html):has(.open) {
     overflow: hidden;
   }
@@ -67,7 +67,7 @@ div {
     display: none;
     margin-top: auto;
     text-align: center;
-    @include responsive(sm) {
+    @include responsive(md) {
       display: block;
     }
     hr {
@@ -82,6 +82,7 @@ div {
       padding: 20px 80px;
       border: none;
       cursor: pointer;
+      margin-bottom: calc(lvh - svh);
     }
   }
 }
